# score

backend/: .eslintrc.json  .gitignore  .prettierrc.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts  problems.ts  response-interceptor.ts
backend/src/errors/: user-error.ts
backend/src/prisma/: prisma.service.ts
backend/src/problem/: problem-validator.ts  problem.controller.ts  problem.module.ts  problem.service.ts
backend/src/problem/dtos/: get-problems-query.dto.ts  (+1 more)
backend/src/team/: team.controller.ts  team.module.ts  team.service.ts
backend/src/user/: user.controller.ts  user.module.ts  user.service.ts
cli/: .gitignore  Cargo.toml
cli/src/: cli.rs  db.rs  main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.html  assignment.ts  request.ts  stores.ts
frontend/src/api/: problem.ts  team.ts
frontend/src/components/: Center.svelte
frontend/src/models/: problem.ts  team.ts
frontend/src/routes/: +layout.svelte  +page.svelte
validators/: build.sh  package.json  pnpm-lock.yaml  typing.d.ts
validators/1-1/: check.mjs
validators/1-2/: Dockerfile
validators/1-3/: check.mjs
validators/1-4/: check.mjs
validators/1-5/: check.mjs
validators/2-1/: Dockerfile  check.mjs
validators/2-2/: Dockerfile
validators/2-3/: check.mjs
validators/2-4/: check.mjs
validators/2-5/: check.mjs
validators/3-1/: check.mjs
validators/3-2/: Dockerfile
validators/3-3/: Dockerfile  check.mjs
validators/3-4/: Dockerfile  check.mjs
validators/base/: Dockerfile
(+11 files in other folders)
