[package]
name = "score-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.28"
prettytable-rs = "0.10.0"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "time"] }
tokio = { version = "1.27.0", features = ["rt", "macros"] }
